--- a/src/Pokedex/nbproject/project.properties
+++ b/src/Pokedex/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Pokedex.Interface.InterfacePokedex
+main.class=Interface.JFInterfacePokedex
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
